# Vote-System-

./: README.md
backend/: main.py  oop-config.json  pyproject.toml
frontend/: doVote.py  requirements.txt  webgui.py
